<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.uconnekt.ui.common_activity.DeactiateAccountActivity">

    <include layout="@layout/actionbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_60sdp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/logocolor"
            android:textSize="@dimen/_22sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deactivating_qus"
            android:textColor="@color/darkgray"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deactive_dis"
            android:textColor="@color/lightgray"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btnDeactive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/deactivate_account"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_medium"
            android:background="@drawable/button_bg"/>

    </LinearLayout>

</LinearLayout>
