<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/mainlayout"
    tools:context="com.uconnekt.ui.common_activity.NetworkActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/actionbar_layout"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"/>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_30sdp"
        app:srcCompat="@drawable/ic_antenna" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/_16sdp"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/yellow"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_internet_connection"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/montserrat_light"
        android:textColor="@color/darkgray"
        android:textSize="@dimen/_12sdp"
        android:text="@string/no_internet_des"/>

    <Button
        android:id="@+id/btn_for_tryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>
