<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:id="@+id/mainlayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.uconnekt.ui.authentication.email_authentication.EmailVerificationActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_for_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_left_arrow"
            android:padding="@dimen/_5sdp" />

        <TextView
            android:id="@+id/tv_for_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/verify"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp"
        android:layout_below="@+id/toolbar">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_50sdp"
            app:srcCompat="@drawable/ic_email_verification"
            android:layout_gravity="center"
            android:background="@drawable/circle_for_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_email"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/Black"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/lightgray"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_12sdp"
            android:text="@string/verify_dis"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_for_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_2sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/yellow" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/yellow"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
